more stop-gap styling

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,5 @@
 /* @TODO: go through these styles and prune unused ones */
+/* @TODO: make bootstrap grid actually work on all display sizes  */
 @charset "UTF-8";
 * {
   padding: 0;
@@ -77,7 +78,7 @@ html {
 html body {
   height: 100%;
   width: 100%;
-  background-image: url("images/bg.jpg");
+  background-image: url("/images/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-size: 100% 100%;
@@ -469,4 +470,4 @@ html body #home #start:active {
   background-color: #a4b0be;
   color: white;
 }
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=index.css.map */
